<resources>
    <string name="app_name">Priori-T</string>
    <string name="tommorrow_txtview_label">TOMORROW</string>
    <string name="today_txtview_label">TODAY</string>
    <string name="upcoming_txtview_label">UPCOMING</string>
    <string name="tasks_tab_label">TASKS</string>

    <string name="calendar_tasks_tab_label">CALENDAR</string>
    <string name="monday">MONDAY</string>
    <string name="tuesday">TUESDAY</string>
    <string name="wednesday">WEDNESDAY</string>
    <string name="thursday">THURSDAY</string>
    <string name="friday">FRIDAY</string>
    <string name="saturday">SATURDAY</string>
    <string name="sunday">SUNDAY</string>
    <string name="default_txtview">default Text</string>
    <string name="shutup"></string>
    <string name="button_text_day_due">Day The Task Is Due</string>
    <string name="button_text_time_due">Time The Task Is Due</string>
    <string name="min_to_complete_text">How Long It Will Take</string>
    <string name="subtask_create">subtaskCreate</string>
    <string name="ttc_desc">is the time to complete</string>
    <string name="edit_desc">is the edit button/textview</string>
    <string name="task_description_header">Task Description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_button_text">SAVE</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
</resources>
