<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_task_add">
<!--TODO: Adding a new Task Page -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/task_description_edit_text"
        android:layout_width="378dp"
        android:layout_height="52dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBar" />

    <FrameLayout
        android:id="@+id/fragment_place_holder"
        android:layout_width="match_parent"
        android:layout_height="@dimen/timeButtonLayoutHeight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/save_button_text"/>
            <!--android:onClick="onDueDateQuestionClicked"-->
    </FrameLayout>

    <TextView
        android:id="@+id/task_description_header"
        android:layout_width="271dp"
        android:layout_height="35dp"
        android:contentDescription="task description header"
        android:text="@string/task_description_header"
        android:textAlignment="center"
        android:textColor="@color/color_primary_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/task_description_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBar"
        app:layout_constraintVertical_bias="0.018"
        tools:text="@string/task_description_header" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/task_due_date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/button_text_day_due"
        app:layout_constraintBottom_toTopOf="@+id/fragment_place_holder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_description_edit_text"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/task_due_time_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/button_text_time_due"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_due_date_button"
        app:layout_constraintVertical_bias="0.408" />

    <TextView
        android:id="@+id/min_to_complete_picker"
        android:layout_width="275dp"
        android:layout_height="34dp"
        android:layout_marginTop="28dp"
        android:text="@string/min_to_complete_text"
        android:textAlignment="center"
        android:textColor="@color/color_primary_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_due_time_button"
        app:layout_constraintVertical_bias="1.0" />

    <NumberPicker
        android:id="@+id/number_picker_minutes"
        android:layout_width="58dp"
        android:layout_height="176dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.626"
        app:layout_constraintStart_toStartOf="parent" />

    <NumberPicker
        android:id="@+id/number_picker_hours"
        android:layout_width="58dp"
        android:layout_height="175dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/number_picker_minutes"
        app:layout_constraintHorizontal_bias="0.972"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_bias="0.986" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="417dp" />

    <TextView
        android:id="@+id/text_view_hours"
        android:layout_width="58dp"
        android:layout_height="22dp"
        android:layout_marginTop="16dp"
        android:text="@string/hours"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/number_picker_hours"
        app:layout_constraintEnd_toStartOf="@+id/text_view_minutes"
        app:layout_constraintHorizontal_bias="0.852"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_view_minutes"
        android:layout_width="58dp"
        android:layout_height="22dp"
        android:layout_marginTop="16dp"
        android:text="@string/minutes"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/number_picker_minutes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.626"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="667dp" />


</androidx.constraintlayout.widget.ConstraintLayout>