<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <!--TODO: get drawable for edit button-->

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/task_complete_checkbox"
        android:layout_width="32dp"
        android:layout_height="26dp"
        android:layout_marginBottom="24dp"
        android:text="@string/shutup"
        app:layout_constraintBottom_toTopOf="@+id/middle_guideline"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ttc_clock_imageview"
        android:layout_width="26dp"
        android:layout_height="@dimen/timeToCompleteTextHeight"
        android:contentDescription="@string/shutup"
        android:scaleType="fitCenter"
        android:tint="@color/color_primary"
        app:layout_constraintBottom_toTopOf="@+id/ttc_textview"
        app:layout_constraintStart_toEndOf="@+id/task_complete_checkbox"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_access_time_24"
        tools:srcCompat="@drawable/ic_baseline_access_time_24" />

    <ImageButton
        android:id="@+id/create_subtask_button"
        android:layout_width="58dp"
        android:layout_height="50dp"
        android:contentDescription="@string/subtask_create"
        android:foregroundTint="#FFFFFF"
        android:tint="@color/textcolor_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/add_subtask_24"/>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/ttc_textview"
        android:layout_width="51dp"
        android:layout_height="@dimen/timeToCompleteTextHeight"
        android:text="@string/default_txtview"
        android:textAlignment="center"
        android:textColor="@color/color_primary"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/middle_guideline"
        app:layout_constraintStart_toEndOf="@+id/ttc_clock_imageview"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/task_description_textview"
        android:layout_width="299dp"
        android:layout_height="26dp"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/edit_task_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_due_date_imageview" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/middle_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="50dp" />

    <ImageButton
        android:id="@+id/edit_task_button"
        android:layout_width="54dp"
        android:layout_height="50dp"
        android:contentDescription="@string/shutup"
        android:tint="@color/color_blue"
        app:layout_constraintBottom_toTopOf="@+id/middle_guideline"
        app:layout_constraintEnd_toStartOf="@+id/create_subtask_button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/ttc_clock_imageview"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/edit24" />

    <ImageView
        android:id="@+id/task_due_date_imageview"
        android:layout_width="28dp"
        android:layout_height="@dimen/timeToCompleteTextHeight"
        android:contentDescription="@string/shutup"
        android:tint="@color/due_date_textcolor"
        app:layout_constraintStart_toEndOf="@+id/ttc_textview"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/due_date_24" />

    <TextView
        android:id="@+id/task_due_date_textview"
        android:layout_width="158dp"
        android:layout_height="25dp"
        android:text="@string/shutup"
        android:textAlignment="center"
        android:textColor="@color/due_date_textcolor"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/edit_task_button"
        app:layout_constraintStart_toEndOf="@+id/task_due_date_imageview"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
